Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -378,3 +378,37 @@ Let’s consider the example of a healthcare app that collects and processes sen
 
 - Transparency: The company provides a clear privacy policy that outlines how data will be collected, used, and protected, giving users the confidence that their sensitive health information is being handled responsibly.
 
+## 3.1.10 Shared Responsibility ##
+
+The principle of shared responsibility in cybersecurity refers to the idea that security is a joint effort between multiple parties, where the responsibilities for securing a system, data, and infrastructure are divided between the service provider and the customer. It’s a concept especially relevant in the context of cloud computing, managed services, and other outsourced IT environments. By understanding who is responsible for what, organizations can ensure that critical security measures are implemented effectively and that no security gaps are overlooked.
+
+:necktie: Security is a team effort—your cloud, their infrastructure, our responsibility
+
+Key Aspects of Shared Responsibility:
+
+- Service Provider's Role: The service provider (e.g., a cloud service provider like Amazon Web Services, Microsoft Azure, or Google Cloud) is typically responsible for securing the infrastructure that underpins the service. This includes ensuring the physical security of data centers, the security of the hypervisor, and the network that supports the service. The service provider is also responsible for maintaining a secure and compliant environment at the hardware and software levels to prevent vulnerabilities.
+
+- Customer's Role: The customer (e.g., an organization using cloud services) is responsible for securing everything that is built on top of the provided infrastructure. This typically includes the configuration of virtual machines, storage, applications, and user access controls. In the case of cloud computing, customers manage data, identity management, network configurations, and even certain parts of application security.
+
+- Clear Division of Security Layers: The shared responsibility model clearly defines the layers of security that are managed by each party. For example, in a cloud environment the cloud provider is responsible for securing the infrastructure, such as the hardware, networking, and hypervisor and the customer is responsible for securing what is built on top of that infrastructure, such as their data, applications, and user authentication.
+
+- Accountability and Control: Shared responsibility ensures that both parties are aware of their roles and are held accountable for meeting their respective security obligations. It also allows both the service provider and the customer to focus on areas where they have control and expertise, thereby improving overall security.
+
+- Security Models and Agreements: Providers and customers often formalize the shared responsibility model through security documentation, contracts, and service-level agreements (SLAs). This helps avoid misunderstandings and ensures that both parties know exactly what security measures are in place.
+
+## 3.1.11 Secure Access Service Edge ##
+
+Secure Access Service Edge (SASE) is a cybersecurity framework that integrates network security and wide-area networking (WAN) into a single cloud-based service. Coined by Gartner in 2019, SASE addresses the evolving needs of modern businesses by providing secure access to applications and data regardless of user location.
+
+Key Principles of SASE are:
+
+- Cloud-Native Architecture – SASE is delivered as a cloud service, enabling scalability, flexibility, and ease of management.
+
+- Zero Trust Network Access (ZTNA) – Ensures users and devices are authenticated before granting access to resources, reducing the risk of unauthorized access.
+
+- Security Convergence – Combines multiple security functions such as Secure Web Gateway (SWG), Cloud Access Security Broker (CASB), Firewall as a Service (FWaaS), and Data Loss Prevention (DLP) into a single solution.
+
+- Global Reach with Local Performance – Uses distributed cloud-based points of presence (PoPs) to optimize connectivity and performance for remote users.
+
+- Identity-Driven Security – Access control is based on user identity, device, and security posture, rather than just network location.
+
