Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -14,6 +14,8 @@ These are the main components of a state machine model:
 | **Initial State**         | The default starting point (e.g., system off or user logged out).             |
 | **Final/Accepting State** | End state or condition where a process completes.                             |
 
+In the following you can find a login system which is an example of a state machine model:
+
 ```mermaid
 stateDiagram-v2
     [*] --> LoggedOut
@@ -21,6 +23,37 @@ stateDiagram-v2
     LoggingIn --> LoggedIn: Credentials valid
     LoggingIn --> LoggedOut: Credentials invalid
     LoggedIn --> LoggedOut: User logs out
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+The **lattice** model is used in mandatory access control (MAC) systems, where data and users are assigned security labels. These labels determine who can access what, using a mathematical structure called a lattice.
+The main idea is simple:
+
+- Every user and object (files, databases, etc.) has a classification level (e.g., Top Secret, Secret, Confidential, Unclassified).
+
+- Users can only access information at their level or lower (e.g., a Secret user can access Confidential data but not Top Secret data).
+
+For example, in military organizations, a general with Top Secret clearance can access all classified information, while a soldier with Confidential clearance cannot see Secret or Top Secret data.
+
+These are the main components of a state machine model:
+| Component             | Description                                                                 |
+|----------------------|-----------------------------------------------------------------------------|
+| **Subjects**          | Active entities (e.g., users, processes) requesting access to objects.     |
+| **Objects**           | Passive entities (e.g., files, databases) being accessed.                  |
+| **Security Labels**   | Labels (e.g., Top Secret, Secret, Confidential) assigned to subjects/objects. |
+| **Security Lattice**  | A structure defining the dominance relationship among labels.              |
+| **Access Rules**      | Determines if a subject can read/write an object based on the lattice.     |
+
+```mermaid
+stateDiagram-v2
+    [*] --> RequestAccess: Subject requests access to Object
+    RequestAccess --> CheckLabels: Compare subject and object labels
+    CheckLabels --> AccessGranted: If subject dominates object (read) or object dominates subject (write)
+    CheckLabels --> AccessDenied: If dominance rule is not satisfied
+    AccessGranted --> [*]
+    AccessDenied --> [*]
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
