Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -44,7 +44,9 @@ These are the main components of a state machine model:
 | **Objects**           | Passive entities (e.g., files, databases) being accessed.                  |
 | **Security Labels**   | Labels (e.g., Top Secret, Secret, Confidential) assigned to subjects/objects. |
 | **Security Lattice**  | A structure defining the dominance relationship among labels.              |
+| **Dominance Relation**| A rule that defines when a subject can access an object based on labels.   |
 | **Access Rules**      | Determines if a subject can read/write an object based on the lattice.     |
+
 
 ```mermaid
 stateDiagram-v2
@@ -52,8 +54,7 @@ stateDiagram-v2
     RequestAccess --> CheckLabels: Compare subject and object labels
     CheckLabels --> AccessGranted: If subject dominates object (read) or object dominates subject (write)
     CheckLabels --> AccessDenied: If dominance rule is not satisfied
-    AccessGranted --> [*]
-    AccessDenied --> [*]
+
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
