Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -59,3 +59,35 @@ stateDiagram-v2
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
+
+**Information Flow** Models ensure that data flows in a secure manner, preventing leaks or unauthorized access. They focus on how information moves within a system rather than just access permissions.
+
+Bell-LaPadula Model (Confidentiality Focused) → Prevents unauthorized reading of higher-classified data (No Read Up) and unauthorized writing to lower-classified data (No Write Down).
+
+Biba Model (Integrity Focused) → Prevents users from modifying higher-integrity data (No Write Up) and from reading lower-integrity data (No Read Down).
+
+For example e financial system using the Biba Model would prevent an intern from modifying critical accounting records, ensuring only senior accountants can make changes.
+
+These are the main components of an information flow model:
+| Component             | Description                                                                 |
+|----------------------|-----------------------------------------------------------------------------|
+| **Subjects**          | Active entities (e.g., users, programs) that send or receive information.  |
+| **Objects**           | Passive entities (e.g., files, databases) involved in information exchange. |
+| **Information Flow**  | The movement or transfer of data between subjects and/or objects.           |
+| **Flow Policy**       | Rules that determine allowed and disallowed data flows based on labels or levels. |
+| **Security Labels**   | Classifications assigned to subjects and objects (e.g., Confidential, Public). |
+| **Channels**          | Logical paths or mechanisms used to transfer data.                          |
+| **Direction of Flow** | Indicates whether flow is read, write, or communication between components. |
+
+```mermaid
+stateDiagram-v2
+    [*] --> FlowRequest: Subject attempts to send or receive information
+    FlowRequest --> CheckPolicy: System checks flow against security policy
+    CheckPolicy --> AllowedFlow: Flow is permitted under current policy
+    CheckPolicy --> BlockedFlow: Flow is denied to prevent a policy violation
+    AllowedFlow --> [*]
+    BlockedFlow --> [*]
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
