Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -89,3 +89,35 @@ stateDiagram-v2
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
+
+A **noninterference model** ensures that high-level users (e.g., admins, military officers) do not influence low-level users (e.g., general employees, soldiers) in a way that reveals sensitive data. The idea is that actions taken by high-privileged users should not affect what lower-privileged users see or do. This model is often used to prevent covert channels (hidden ways for users to communicate unauthorized information).
+
+For example In a classified government database, if an admin searches for “Top Secret Spy List,” lower-level users should not notice changes in system response time (which might hint at the existence of such a list).
+
+These are the main components of a non-interference model:
+| Component             | Description                                                                 |
+|----------------------|-----------------------------------------------------------------------------|
+| **Subjects**          | Active entities (e.g., users, processes) interacting with the system.       |
+| **High-Level Subjects (H)** | Subjects with access to sensitive or confidential data.                     |
+| **Low-Level Subjects (L)** | Subjects with limited or no access to sensitive data.                        |
+| **System States**     | Represent the observable behavior of the system.                             |
+| **Actions**           | Operations performed by subjects (e.g., read, write, execute).               |
+| **Non-Interference**  | Property stating that actions of high-level subjects must not affect what low-level subjects can observe. |
+| **Observables**       | The outputs or state changes that low-level users can perceive.              |
+
+```mermaid
+stateDiagram-v2
+    [*] --> SystemIdle
+    SystemIdle --> HighAction: High-level subject performs action
+    HighAction --> SystemStateH: System state changes (invisible to low-level users)
+    SystemStateH --> SystemIdle
+
+    SystemIdle --> LowAction: Low-level subject performs action
+    LowAction --> SystemStateL: System state changes (observable by low-level users)
+    SystemStateL --> SystemIdle
+
+    note right of HighAction
+      No effect on SystemStateL
+      (non-interference enforced)
+    end note
+```
