Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -107,18 +107,16 @@ These are the main components of a non-interference model:
 
 ```mermaid
 stateDiagram-v2
-    [*] --> SystemIdle
-    SystemIdle --> HighAction: High-level subject performs action
-    HighAction --> SystemStateH: System state changes (invisible to low-level users)
-    SystemStateH --> SystemIdle
+    [*] --> LowUserAction
+    LowUserAction --> LowObservableState
 
-    SystemIdle --> LowAction: Low-level subject performs action
-    LowAction --> SystemStateL: System state changes (observable by low-level users)
-    SystemStateL --> SystemIdle
+    [*] --> HighUserAction
+    HighUserAction --> HiddenStateChange
 
-    note right of HighAction
-      No effect on SystemStateL
-      (non-interference enforced)
+    note right of HiddenStateChange
+      High-level actions happen,
+      but low-level users can't see
+      any result of them.
     end note
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
