Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -107,17 +107,24 @@ These are the main components of a non-interference model:
 
 ```mermaid
 stateDiagram-v2
-    [*] --> LowUserAction
-    LowUserAction --> LowObservableState
+    [*] --> L_Subject_Performs_Action
+    L_Subject_Performs_Action --> System_State_L
+    System_State_L --> L_Observes_State
 
-    [*] --> HighUserAction
-    HighUserAction --> HiddenStateChange
+    [*] --> H_Subject_Performs_Action
+    H_Subject_Performs_Action --> System_State_H
 
-    note right of HiddenStateChange
-      High-level actions happen,
-      but low-level users can't see
-      any result of them.
+    note right of System_State_H
+      High-level action changes system state,
+      but low-level subjects cannot observe it.
     end note
+
+    note right of L_Observes_State
+      Low-level subject only sees effects
+      of low-level actions.
+      High-level actions are invisible.
+    end note
+
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
