Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -1,5 +1,35 @@
 ## 3.2 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula) ##
 
+The **Trusted Computing Base (TCB)** refers to the core components of a system that are responsible for enforcing security. It includes:
+- The Operating System Kernel
+- Security mechanisms (e.g., access control, authentication)
+- Hardware components that support security
+
+If the TCB is compromised, the entire system is at risk, which is why it must be carefully designed and protected.
+
+```mermaid
+stateDiagram-v2
+    [*] --> UserRequest
+
+    UserRequest --> TCB_ChecksAccess : Request access to resource
+    TCB_ChecksAccess --> AccessGranted : Policy allows it
+    TCB_ChecksAccess --> AccessDenied : Policy denies it
+
+    AccessGranted --> [*]
+    AccessDenied --> [*]
+
+    note right of TCB_ChecksAccess
+      The TCB evaluates all access requests\n
+      using mandatory security policies.\n
+      It must be protected from tampering.
+    end note
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
+
+---
 Security models provide structured frameworks to enforce security policies and ensure that systems operate securely. These models define rules for access control, information flow, and system security. 
 
 A **state machine** model ensures that a system is always in a secure state. Think of a state as a snapshot of a system at a specific moment, including user permissions, data access levels, and active processes.
