Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -15,12 +15,9 @@ stateDiagram-v2
     TCB_ChecksAccess --> AccessGranted : Policy allows it
     TCB_ChecksAccess --> AccessDenied : Policy denies it
 
-    AccessGranted --> [*]
-    AccessDenied --> [*]
-
     note right of TCB_ChecksAccess
-      The TCB evaluates all access requests\n
-      using mandatory security policies.\n
+      The TCB evaluates all access requests
+      using mandatory security policies.
       It must be protected from tampering.
     end note
 
