--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -25,9 +25,42 @@ stateDiagram-v2
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
+The **security perimeter** defines the boundary between trusted and untrusted areas of a system. It includes firewalls, encryption, access controls, and authentication mechanisms that protect internal systems from external threats.
+For example a company's internal network (trusted) is separated from the internet (untrusted) by a firewall and VPN gateways, ensuring only authorized users can access internal resources.
+---
+
+**Security composition theories** help determine whether combining multiple secure systems results in an overall secure system. There are 3 composition theories:
+
+- Cascading → System A feeds into System B. If A and B are secure, the combination should be secure.
+- Feedback → System A and B influence each other. If not properly managed, security issues can arise.
+- Hook-up → System A and B interact with a third system. It requires additional security evaluation.
+
+```mermaid
+stateDiagram-v2
+    [*] --> ComponentA
+    ComponentA --> ComponentB : Cascading Composition
+    ComponentB --> FinalState
+
+    ComponentA --> FeedbackLoop : Feedback Composition
+    FeedbackLoop --> ComponentA
+
+    ComponentA --> SharedIO : Hook-Up Composition
+    ComponentB --> SharedIO
+    SharedIO --> FinalState
+
+    note right of FinalState
+      The system is only secure\n
+      if all components AND their\n
+      interactions maintain security.
+    end note
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
 
 ---
-Security models provide structured frameworks to enforce security policies and ensure that systems operate securely. These models define rules for access control, information flow, and system security. 
+**Security models** provide structured frameworks to enforce security policies and ensure that systems operate securely. These models define rules for access control, information flow, and system security. 
 
 A **state machine** model ensures that a system is always in a secure state. Think of a state as a snapshot of a system at a specific moment, including user permissions, data access levels, and active processes.
 For a system to be considered secure, every transition between states (such as logging in, opening a file, or executing a program) must maintain security properties. This means that if a system starts in a secure state and follows the defined rules, it will always remain secure.
