Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -36,29 +36,58 @@ For example a company's internal network (trusted) is separated from the interne
 - Feedback → System A and B influence each other. If not properly managed, security issues can arise.
 - Hook-up → System A and B interact with a third system. It requires additional security evaluation.
 
+Cascading Composition:
 ```mermaid
 stateDiagram-v2
-    [*] --> ComponentA
-    ComponentA --> ComponentB : Cascading Composition
-    ComponentB --> FinalState
+    [*] --> SystemA
+    SystemA --> SystemB : Output of A → Input of B
+    SystemB --> FinalOutput
 
-    ComponentA --> FeedbackLoop : Feedback Composition
-    FeedbackLoop --> ComponentA
+    note right of SystemA
+      System A processes input securely
+    end note
 
-    ComponentA --> SharedIO : Hook-Up Composition
-    ComponentB --> SharedIO
-    SharedIO --> FinalState
+    note right of SystemB
+      System B must handle A's output securely
+    end not
 
-    note right of FinalState
-      The system is only secure\n
-      if all components AND their\n
-      interactions maintain security.
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+Feedback Composition:
+```mermaid
+stateDiagram-v2
+    [*] --> System
+    System --> System : Output loops back as new input
+    System --> FinalOutput
+
+    note right of System
+      Security must be enforced continuously\n
+      as output affects future behavior
     end note
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
+Hook-up composition:
+```mermaid
+stateDiagram-v2
+    [*] --> SystemA
+    [*] --> SystemB
+    SystemA --> SharedEnvironment
+    SystemB --> SharedEnvironment
+    SharedEnvironment --> FinalOutput
+
+    note right of SharedEnvironment
+      Interaction point must preserve\n
+      confidentiality, integrity, and isolation
+    end note
+
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
 
 ---
 **Security models** provide structured frameworks to enforce security policies and ensure that systems operate securely. These models define rules for access control, information flow, and system security. 
