--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -49,7 +49,7 @@ stateDiagram-v2
 
     note right of SystemB
       System B must handle As output securely
-    end not
+    end note
 
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
