Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -58,8 +58,8 @@ Feedback Composition:
 ```mermaid
 stateDiagram-v2
     [*] --> System
-    System --> System : Output loops back as new input
-    System --> FinalOutput
+    SystemA --> SystemB : Output loops back as new input
+    SystemB --> SystemA
 
     note right of System
       Security must be enforced continuously\n
