Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -57,11 +57,11 @@ stateDiagram-v2
 Feedback Composition:
 ```mermaid
 stateDiagram-v2
-    [*] --> System
+    [*] --> SystemA
     SystemA --> SystemB : Output loops back as new input
     SystemB --> SystemA
 
-    note right of System
+    note right of SystemA
       Security must be enforced continuously\n
       as output affects future behavior
     end note
