Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -59,7 +59,8 @@ Feedback Composition:
 stateDiagram-v2
     [*] --> SystemA
     SystemA --> SystemB : Output loops back as new input
-    SystemB --> SystemA
+    SystemB --> SystemA : Output loops back as new input
+    SystemB --> FinalOutput
 
     note right of SystemA
       Security must be enforced continuously\n
