--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -36,7 +36,7 @@ For example a company's internal network (trusted) is separated from the interne
 - Feedback → System A and B influence each other. If not properly managed, security issues can arise.
 - Hook-up → System A and B interact with a third system. It requires additional security evaluation.
 
-Cascading Composition:
+**Cascading Composition:**
 ```mermaid
 stateDiagram-v2
     [*] --> SystemA
@@ -54,7 +54,7 @@ stateDiagram-v2
     classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
-Feedback Composition:
+**Feedback Composition:**
 ```mermaid
 stateDiagram-v2
     [*] --> SystemA
@@ -71,7 +71,7 @@ stateDiagram-v2
     classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
 ```
 
-Hook-up composition:
+**Hook-up composition:**
 ```mermaid
 stateDiagram-v2
     [*] --> SystemA
