Update 3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md

--- a/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
+++ b/DOMAIN3: Security Architecture and Engineering/3.02 Understand the fundamental concepts of security models (e.g. Biba, STar Model, Bell Lapadula).md
@@ -63,7 +63,7 @@ stateDiagram-v2
     SystemB --> FinalOutput
 
     note right of SystemA
-      Security must be enforced continuously\n
+      Security must be enforced continuously
       as output affects future behavior
     end note
 
@@ -81,7 +81,7 @@ stateDiagram-v2
     SharedEnvironment --> FinalOutput
 
     note right of SharedEnvironment
-      Interaction point must preserve\n
+      Interaction point must preserve
       confidentiality, integrity, and isolation
     end note
 
